[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/ttf/Pixeled.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://themes/ui_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/png/Menu.png" type="Texture" id=3]
[ext_resource path="res://scripts/Network_setup.gd" type="Script" id=4]
[ext_resource path="res://animations/Scale.tres" type="Animation" id=5]
[ext_resource path="res://scripts/Network_UI.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 15
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mutliplayer_config" type="VBoxContainer" parent="."]
margin_left = 185.0
margin_right = 839.0
margin_bottom = 430.0
custom_constants/separation = 60
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="mutliplayer_config"]
margin_right = 654.0
margin_bottom = 84.0
rect_pivot_offset = Vector2( 314, 46 )
custom_colors/font_color = Color( 0.85098, 1, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Create  or Join Server"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="mutliplayer_config/Title"]
autoplay = "Scale"
anims/Scale = ExtResource( 5 )
"anims/Text Sine Scale" = ExtResource( 5 )

[node name="interactables" type="VBoxContainer" parent="mutliplayer_config"]
margin_top = 144.0
margin_right = 654.0
margin_bottom = 430.0
custom_constants/separation = 30

[node name="username" type="LineEdit" parent="mutliplayer_config/interactables"]
margin_right = 654.0
margin_bottom = 52.0
focus_mode = 1
mouse_filter = 1
custom_colors/font_color = Color( 0.85098, 1, 0, 1 )
custom_fonts/font = SubResource( 2 )
align = 1
placeholder_text = "USERNAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Create_Server" type="Button" parent="mutliplayer_config/interactables"]
margin_left = 225.0
margin_top = 82.0
margin_right = 429.0
margin_bottom = 130.0
focus_mode = 1
mouse_filter = 1
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 2 )
enabled_focus_mode = 1
text = "CREATE SERVER"

[node name="Join_Server" type="Button" parent="mutliplayer_config/interactables"]
margin_left = 246.0
margin_top = 160.0
margin_right = 408.0
margin_bottom = 208.0
focus_mode = 1
mouse_filter = 1
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 2 )
enabled_focus_mode = 1
text = "JOIN SERVER"

[node name="Back" type="Button" parent="mutliplayer_config/interactables"]
margin_left = 291.0
margin_top = 238.0
margin_right = 363.0
margin_bottom = 286.0
focus_mode = 1
mouse_filter = 1
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 2 )
enabled_focus_mode = 1
text = "BACK"

[node name="Network_UI" type="CanvasLayer" parent="."]
script = ExtResource( 7 )

[node name="Player_Count" type="Label" parent="Network_UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -63.0
margin_right = 63.0
margin_bottom = 42.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.85098, 1, 0, 1 )
text = "PLAYERS: 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start_Game" type="Button" parent="Network_UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -81.0
margin_top = 200.0
margin_right = 81.0
margin_bottom = 248.0
focus_mode = 1
mouse_filter = 1
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 2 )
enabled_focus_mode = 1
text = "START GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="device_IP" type="Label" parent="Network_UI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -512.0
margin_top = -46.0
margin_right = 512.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "IP ADDRESS: "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Collision" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Collision"]
polygon = PoolVector2Array( 0, 0, 0, -10, 1024, -10, 1024, 0 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Collision"]
position = Vector2( 0, 610 )
polygon = PoolVector2Array( 0, 0, 0, -10, 1024, -10, 1024, 0 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Collision"]
position = Vector2( 1024, 0 )
rotation = 1.5708
polygon = PoolVector2Array( -10, 6.10352e-05, -10, -10, 610, -10.0022, 610, -0.00220776 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="Collision"]
position = Vector2( -10, 0 )
rotation = 1.5708
polygon = PoolVector2Array( -10, 3.62396e-05, -10, -9.99996, 610, -10.0022, 610, -0.00220776 )

[node name="Spawn_Points" type="Node2D" parent="."]

[node name="1" type="Position2D" parent="Spawn_Points"]
position = Vector2( 109, 113 )

[node name="2" type="Position2D" parent="Spawn_Points"]
position = Vector2( 913, 113 )

[node name="3" type="Position2D" parent="Spawn_Points"]
position = Vector2( 107, 308 )

[node name="4" type="Position2D" parent="Spawn_Points"]
position = Vector2( 920, 310 )

[connection signal="pressed" from="mutliplayer_config/interactables/Create_Server" to="." method="_on_Create_Server_pressed"]
[connection signal="pressed" from="mutliplayer_config/interactables/Join_Server" to="." method="_on_Join_Server_pressed"]
[connection signal="pressed" from="mutliplayer_config/interactables/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Network_UI/Start_Game" to="." method="_on_Start_Game_pressed"]
